# dihiggs_hep_cross

./: .gitignore  Makefile  bootstrap_llp_recast.sh  external_tools.lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: antigravity_or_codex_prompt.md
contracts/: model_point_to_llp_recast_v1.yaml
conventions/: physics_conventions.yaml
data/2hdmc_scans/: README.md
data/manual/: README.md
docs/contracts/: diphoton_sigma_input_contract.md  madgraph_run_preparation_contract.md  madgraph_xsec_output_contract.md  model_point_to_llp_recast_contract.md  recast_output_schema.md
docs/recast/: 2hdmc_handoff_runbook.md  atlas_dvjets_local_yaml_inventory.md  atlas_higg_2018_27_dataset_card.md  (+11 more)
scripts/: 01_hepdata_inventory.py  02_hepdata_tidy_extract.py  02_toy_s_recast.py  03_paper_s_benchmark_proxy.py  04_make_paper_aware_figures.py  05_make_interpretation_figures.py  06_export_chat_summaries.py  07_diphoton_hepdata_extract.py  08_diphoton_meeting_package.py  09_link_2hdmc_to_diphoton.py  10_apply_sigma_inputs.py  11_ingest_madgraph_xsec.py  12_prepare_madgraph_runs.py
tests/: conftest.py  test_2hdmc_end_to_end.py  test_apply_sigma_inputs.py  test_constants.py  test_data_contract.py  test_decay_probability.py  test_diphoton_2hdmc_bridge.py  test_diphoton_experiment_side.py  test_external_tools.py  test_hepdata_tidy.py  test_hepdata_yaml.py  test_ingest_madgraph_xsec.py  test_interpretation_exports.py  test_lifetime_conversions.py  test_paper_s_proxy.py  test_plot_data_preparation.py  test_prepare_madgraph_runs.py  test_recast_math.py
(+135 files in other folders)
